fix: card alignment on safari

--- a/src/TileSlider/TileSlider.css
+++ b/src/TileSlider/TileSlider.css
@@ -13,6 +13,7 @@
 .TileSlider-tile {
   display: inline-block;
   list-style-type: none;
+  vertical-align: top;
   white-space: normal;
   box-sizing: border-box;
 }
